--- a/contoso_news/index.html
+++ b/contoso_news/index.html
@@ -2,30 +2,33 @@
 <html lang="en-US">
     <head>
         <title>Contoso News</title>
-        <link rel="stylesheet" href="css/style.css" />
-        <script type="text/javascript" src="js/script.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="css/style.css" />
     </head>
     <body class="container">
         <header>
             <h1>Contoso News</h1>
             <h2>On Time, On Topic</h2>
         </header>
-        <section id="carousel">
-            <figure class="visible">
-                <img src="img/efficient_cars.png" alt="Efficient Cars" />
-                <figcaption>2017 Cars Promise to be More Fuel Efficient Than Ever</figcaption>
-            </figure>
-            <figure>
-                <img src="img/natural_disaster.png" alt="Natural Disaster" />
-                <figcaption>Hurricane Threatens to Touch Down on the East Coast This Weekend</figcaption>
-            </figure>
-            <figure>
-                <img src="img/health_records.png" alt="Health Records" />
-                <figcaption>Many Doctors are Moving to Digital Health Records This Year</figcaption>
-            </figure>
+        <section id="carousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+                <figure class="item active">
+                    <img src="img/efficient_cars.png" alt="Efficient Cars" />
+                    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+                    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+                    <figcaption class="carousel-caption">2017 Cars Promise to be More Fuel Efficient Than Ever</figcaption>
+                </figure>
+                <figure class="item">
+                    <img src="img/natural_disaster.png" alt="Natural Disaster" />
+                    <figcaption class="carousel-caption">Hurricane Threatens to Touch Down on the East Coast This Weekend</figcaption>
+                </figure>
+                <figure class="item">
+                    <img src="img/health_records.png" alt="Health Records" />
+                    <figcaption class="carousel-caption">Many Doctors are Moving to Digital Health Records This Year</figcaption>
+                </figure>
+            </div>
         </section>
         <main class="row">
             <h3>Latest Articles</h3>
